# medium-articles-tobe

./: .gitignore  Document 0.docx  Document 5.docx  Document2.docx  README.md
litehaus-tempt/: GPS-disciplined_rubidium_oscillator.md  grok-atomic-clock.md  security.md
litehaus-tempt/litehaus-home/: CMakeLists.txt
litehaus-tempt/litehaus-home/config/: core.conf
litehaus-tempt/litehaus-home/include/: litehaus_collectors.hpp  litehaus_types.hpp
litehaus-tempt/litehaus-home/scripts/: install.sh  setup-chrony.sh
litehaus-tempt/litehaus-home/systemd/: litehaus-core.service  litehaus-stream.service
ready/: Category Theory Encoding Modular Synth Patches.md
ready/synth_math/ct/: Category Theory Encoding Modular Synth Patches.md
ready/synth_math/fourier/: Fourier’s_Symphony-The_Math_of_Waves.md
ready/synth_math/fractals/: Fractals - Their Symphony with Music.md
ready/synth_math/intro/: Math's Hidden Groove.md
ready/synth_math/non-lins/: Non-Linear Twists - The Curved Soul of Sound.md
ready/top10-drinks/: top10-drinks.md
src/: 6-When Math Finally Makes Sense at 3AM-A Love Letter to Category Theory.txt  DONT READ IT In The Dark We Live....txt  Fourier.md  Fourier’s _Symphony-The_Math_of_Waves.md  Fractals and Their Symphony with Music.md  Fractals.md  Non-Linear Twists - The Curved Soul of Sound1.md  book 4 plan.txt  book-three-plan.txt  book-two-plan.txt  ct-patching.txt  fourier's-symphony-how-math-meets-music-in-the-art-of-sound.md  fractals-and-their-symphony-with-music.md  i r3a11y don't care (1).txt  in_the_dark_we_live.txt  itdwl-gemini-take-1.txt  non-linear-twists-the-secret-sauce-in-synthesizer-sounds.md  phd-prompt-enginering.txt  references4gamblevsdid.txt  voynich-convo-for-claude.txt  wiring-the-abstract.md  wiring-the-abstract.txt  wofl's In The Dark We Live....txt  wofl's To Bind the Scattered Light.txt  wofl's into an eternal nothingness.txt  wofl's the orbit of a lesser star.txt
src/death-hacks/: 1.txt  THE-convo.md  article1.txt  article2.txt  article3.txt  convo2.txt  death-hack-i.md  death-hacks-iii.md  death-hacks-iv.md  death-hacks-v.md
src/did/: did.txt
src/dopamine/: gamblingvsdid.txt  whitepaper.txt
src/european-language-distro/: neighbouring-states.md  the-babel-map-of-europe.md
src/feat_of_strength/: a-diatribe-leading-to-realization.md  feat_o_strength.txt
src/litehaus/: claude-soft-arch.md  claude.md  claudes_deeper_dive.md  f-std-ad1.md  gemini.md  grok.md  litehaus-home-node-spec.md  litehaus-home.tar  note-for-whomevers.txt  petey's-thoughts.md  petey's_deeper_dive.md  petey's_deepest_dive.md  petey.md  prompt_for_lit-rev.md  rubidium-and-seconds.md  what-claude-needs.md
src/litehaus/avoids/: find_hidden_cams.txt  port_scanning.txt
src/litehaus/paper-on-gpsdo/: From_Woden_Sticks_to_Rubidium_Atoms.tex  number-of.md  promp-for-prehist.md  rubidium-and-seconds.md  some-refs.md  ver-2.txt
src/litehaus/papers/: Edge-based_passive_crowd_monitoring_through_WiFi_Beacons.md  litehaus-homepage.html  quantum_repeaters_stuttgart.md
src/math-of-synth/: 6-Mathematical synthesis research.txt  6refs.txt  CategoryTheory.md  Non-Linear_Twists-The_Curved_Soul_of_Sound.md  Wiring_the_Abstract-How_Category_Theory_Encodes_Modular_Synth_Patches.md  wiring-the-abstract.md
src/math-of-synth/partials/: Document 2.docx  Document 4.docx  Document.docx  Document1.docx  Document3.docx
src/sending-ice-to-micronesia-by-mail/: sending-ice-to-micronesia-by-mail.txt
src/showdown/chatgpt4o/: ga-mr_chatgpt4.txt  ga-mr_gpt.txt
src/showdown/claude4sonnet/: claude4_ga-mr.txt  compass_artifact_wf-f7320637-0535-461a-a920-af4ffec10a17_text_markdown.md  (+1 more)
src/top10-drinks/: drinks-stats.md  gemini-prompt.md  grok-cono[extracts].md  grok-cono[raw-txt].md  how-to-run-code.md  top10-drinks-gfx.py  top10-drinks.md  top10-drinks.py  top10-soft.py
(+9 files in other folders)
